# labelsis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE-v0.8.3.md  THIRD_PARTY_NOTICES.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
.beads/: metadata.json
.beads/hooks/: commit-msg
boards/: README.md
boards/devkitc_s3/: board.h  partitions.csv  sdkconfig.defaults
boards/lolin_s2_mini/: board.h  partitions.csv  sdkconfig.defaults  target
components/pt_app/: CMakeLists.txt  idf_component.yml
components/pt_app/include/: pt_app.h  pt_dns.h  pt_led.h
components/pt_app/spa/: index.html  qrcode.min.js  setup.html
components/pt_app/spa/i18n/: de.json
components/pt_app/src/: pt_app.c  pt_dns.c  pt_led.c
components/pt_protocol/: CMakeLists.txt  srcs.cmake
components/pt_protocol/include/: pt_protocol.h
components/pt_protocol/src/: pt_protocol.c
components/pt_session/: CMakeLists.txt  srcs.cmake
components/pt_session/include/: pt_session.h
components/pt_session/src/: pt_session.c
components/pt_transport/: CMakeLists.txt  idf_component.yml  srcs.cmake
components/pt_transport/include/: pt_transport.h  pt_transport_libusb.h  pt_transport_mock.h  pt_transport_usb_host.h
components/pt_transport/src/: libusb.c  mock.c  plite_unstick.c  plite_unstick.h  usb_host.c
doc/: DEVELOPMENT.md  HARDWARE.md  INSTALL.md  OTA.md  RESEARCH-PLITE.md  TROUBLESHOOTING.md  USAGE.md
host/: CMakeLists.txt
host/lib/: fixture.c  fixture.h
host/tests/: CMakeLists.txt  smoke_libusb.c  test_bitmap.c  test_encoder.c  test_encoder_vs_oracle.c  test_mock_transport.c  test_oracle_fixtures.c  test_packbits.c  test_placeholder.c  test_session.c  test_status_decode.c
main/: CMakeLists.txt  main.c  wifi_credentials.example.h
refs/: README.md
scripts/: build-release.sh  build_spa_assets.py  ci.sh  host-test.sh  idf-env.sh  labelsis-ota.py  mock-server.py  parse_ptd.py
test/fixtures/: calibrate_12mm_tape_12mm.json  calibrate_12mm_tape_12mm_raw.json  gunda_18mm_18mm.json  l_24mm_long.json  tux-128px-bw_24mm.json  tux-128px-bw_24mm_raw.json
tools/cli/: CMakeLists.txt  pt_send.c
tools/oracle/: CMakeLists.txt  README.md  capture-fixtures.sh  ptouch-770-capture.c
